# DecisionTheoryApp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
app/: __init__.py
app/algorithms/: registry.py
app/algorithms/example/: ahp.py  algo.py  parser.py  schema.py  test_ahp.py  test_parse.py
app/algorithms/example/CSV_Tests/: Pattern 9 CSV.csv  Pattern 9.xlsx  Pattern 9_4 CSV.csv  Pattern CSV.csv  Pattern.xlsx  Pattern_test_ahp CSV.csv  Pattern_test_ahp.xlsx
app/api/: algorithms.py  reports.py  runs.py
app/db/: mongo.py
app/reporting/: reporter.py
app/services/: run_service.py
docker/: Dockerfile  docker-compose.yml
frontend/mocks/: algorithms.json  report.json  run_created.json
frontend/src/: app.js  config.js  index.html  input.html  report.html  style.css
frontend/src/assets/templates/: method_analyzing_hierarchies.xlsx
frontend/src/css/: index.css  input.css  report.css
frontend/src/js/: index.js  input.js  report.js
tests/: test_ahp_parser.py  test_algorithms.py  test_routes.py
tests/csv-test-1-algo/: edge_auto_diagonal.csv  edge_auto_inverse.csv  invalid_mismatched_sizes.csv  invalid_no_pairwise.csv  invalid_non_numeric_scores.csv  valid_3_basic.csv  valid_comma_decimals.csv  valid_max_size.csv  valid_minimal.csv  valid_with_dev0_placeholders.csv
