[project]
name = "decision-theory-app"
version = "0.1.0"
description = "Flask app for decision theory algorithms"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.0.0",
  "pymongo>=4.7.0",
  "gunicorn>=22.0.0",
  "markdown>=3.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-spec>=6.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--spec"
spec_test_format = "{result} {docstring_summary}"

[tool.ruff]
line-length = 100

# --- added: make setuptools package discovery explicit (only app) ---
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["frontend*", "docker*", "docs*", "tests*"]
